--- a/springboot-thymeleafdemo-employees-list-db/src/main/resources/templates/employees/employee-form.html
+++ b/springboot-thymeleafdemo-employees-list-db/src/main/resources/templates/employees/employee-form.html
@@ -29,6 +29,8 @@
         <button type="submit" class="btn btn-info col-2">Save</button>
 
     </form>
+    <hr>
+    <a th:href="@{/employees/list}">Back to Employees list</a>
 </div>
 </body>
 </html>
